...
                textAlign = TextAlign.Start
            )

            OutlinedTextField(
                value = uiState.username,
                onValueChange = { loginViewModel.onUsernameChange(it)},
                label = { Text("Usuari")},
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("usernameField"),
                singleLine = true
            )

            OutlinedTextField(
                value = uiState.password,
                onValueChange = { loginViewModel.onPasswordChange(it) },
                label = { Text("Contrasenya")},
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("passwordField"),
                singleLine = true,
                visualTransformation = PasswordVisualTransformation()
            )

            uiState.errorMessage?.let {
                Text(
...

            Button(
                onClick = { loginViewModel.login() },
                enabled = !uiState.isLoading,
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("loginButton")
            ) {
                if (uiState.isLoading) {
                    CircularProgressIndicator()
                } else {
                    Text("Iniciar Sessió")
                }
            }

            Text(
                text = "No tens compte? Registra’t",
                color = MaterialTheme.colorScheme.primary,
                modifier = Modifier
                    .fillMaxWidth()
                    .clickable { onRegisterClick() }
                    .padding(top = 8.dp),
                textAlign = TextAlign.Center
...
